--- a/wiki/Framework.wiki
+++ b/wiki/Framework.wiki
@@ -17,13 +17,15 @@ These are the features of the framework
   * Global Event dispatching+listening system
   * Automatic Event removal system   
   * Transition between pages 
-    * Xustom transitions are possible. This keeps your freedom of expression and makes it usable for every custom project. Just implement ITransition.
+    * Custom transitions are possible. This keeps your freedom of expression and makes it usable for every custom project. Just implement ITransition.
   * Global page settings
     * Transition in/out between page
     * Easing/time customizable
     * Alignment options
     * All settings can be overrided on page level
   
+----
+
 = Tutorial =
 
 === How to use ===
